--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
     </div>
   </main>
 
-  <footer class="blog-footer">
-    <div class="container">
+  <footer class="blog__footer">
+    <div class="blog__container">
       <span>Copyright@KangTutor</span>
     </div>
   </footer>
