fix: move nav items to a li tag

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
           <li><a href="#" class="navbar__link">Tutorial</a></li>
           <li><a href="#" class="navbar__link">Pemrograman</a></li>
           <li><a href="#" class="navbar__link">Teknologi</a></li>
-          <li class="navbar__link">
+          <li class="navbar__close"><img class="navbar__close-icon" src="images/icons/close.svg" /></li>
+          <li class="navbar__search">
             <form class="navbar__search-bar">
               <input class="search-bar__input" type="text" placeholder="Cari Artikel atau Kategori">
               <button class="search-bar__button">
