style: add class

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
           <figure>
             <img class="card__image" src="images/travel.jpg" alt="Ini Adalah Judul Artikel" />
             <figcaption class="card__label">
-              <span>In Label</span>
+              <span class="card__category">In Label</span>
               <h3>Ini Adalah Judul Artikel</h3>
-              <span><strong>By</strong> Ridho Satriawan</span>
+              <span class="card__author"><strong>By</strong> Ridho Satriawan</span>
             </figcaption>
           </figure>
         </article>
