feat: create blog script

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/style.css">
   <title>Simple Responsive Blog Design</title>
 </head>
-<!-- <body class="mobile__menu"> -->
+
 <body>
   <header class="blog__header">
     <div class="blog__container">
@@ -186,5 +186,7 @@
       <span>Copyright@KangTutor</span>
     </div>
   </footer>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
